Ensure that links are visible on white bg of the trix editor link input

--- a/app/assets/stylesheets/better_together/forms.scss
+++ b/app/assets/stylesheets/better_together/forms.scss
@@ -106,3 +106,7 @@ input[type="range"]::-ms-thumb {
   border-radius: 50%;
   cursor: pointer;
 }
+
+trix-toolbar .trix-input--dialog {
+  color: $light-background-text-color;
+}
