--- a/app/assets/stylesheets/better_together/theme.scss
+++ b/app/assets/stylesheets/better_together/theme.scss
@@ -6,6 +6,8 @@ $text-opposite-theme-color: #333 !default;
 $background-opposite-theme-color: #fff !default;
 $dark-text-color: #f8f9fa !default;
 $dark-background-color: #212529 !default;
+$light-background-text-color: #222 !default;
+$dark-background-text-color: #f0f0f0 !default;
 
 /* Define SCSS variables for common color properties */
 $slider-track-color: $secondary !default;
